--- a/_config.yml
+++ b/_config.yml
@@ -23,12 +23,9 @@ zhihu_username:     绿吘话桑
 
 
 
-
-
 # Build settings
 # from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
 permalink: pretty
-paginate: 13
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
 anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
 
@@ -38,6 +35,8 @@ anchorjs: true                          # if you want to customize anchor. check
 # from PR#40, to support local preview for Jekyll 3.0
 # gems: [jekyll-paginate,jemoji,jekyll-sitemap]
 gems: [jekyll-paginate] #页码插件
+paginate: 10
+paginate_path: "blog/page:num"
 
 
 # Markdown settings
