--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ sidebar-avatar: /img/yeswecode.jpg      # use absolute URL, seeing it's used in 
 # SNS settings
 RSS: true
 github_username:    kanglover
-zhihu_username:     绿吘话桑
+zhihu_username:     lu-ou-hua-sang
 
 
 
